--- a/src/FrogDataLib/thunderstore.toml
+++ b/src/FrogDataLib/thunderstore.toml
@@ -1,44 +1,44 @@
 [config]
-schemaVersion = "0.0.1"
+  schemaVersion="0.0.1"
 
 [general]
-repository = "https://thunderstore.io"
+  repository="https://thunderstore.io"
 
 [package]
-namespace = "Robyn"
-name = "FrogDataLib"
-description = "A straightforward library for managing mod save data"
-websiteUrl = "" # TODO: Add a link to your mod repository here (optional)
-containsNsfwContent = false
+  containsNsfwContent=false
+  description        ="A straightforward library for managing mod save data"
+  name               ="FrogDataLib"
+  namespace          ="Robyn"
+  websiteUrl         ="https://github.com/RobynLlama/FrogDataLib"
 
-[package.dependencies]
-BepInEx-BepInExPack = "5.4.2304"
+  [package.dependencies]
+    BepInEx-BepInExPack="5.4.2304"
 
 [build]
-icon = "../../icon.png"
-readme = "../../README.md"
-outdir = "../../artifacts/thunderstore/"
+  icon  ="../../icon.png"
+  outdir="../../artifacts/thunderstore/"
+  readme="../../README.md"
 
-[[build.copy]]
-source = "../../artifacts/bin/FrogDataLib/release/dev.mamallama.frogdatalib.dll"
-target = "plugins/"
+  [[build.copy]]
+    source="../../artifacts/bin/FrogDataLib/release/dev.mamallama.frogdatalib.dll"
+    target="plugins/"
 
-[[build.copy]]
-source = "../../CHANGELOG.md"
-target = "/"
+  [[build.copy]]
+    source="../../CHANGELOG.md"
+    target="/"
 
-[[build.copy]]
-source = "../../LICENSE"
-target = "/"
+  [[build.copy]]
+    source="../../LICENSE"
+    target="/"
 
-# The following config options only apply when using TCLI to publish to Thunderstore directly:
+    # The following config options only apply when using TCLI to publish to Thunderstore directly:
 
 [publish]
-# See communities at:
-# https://thunderstore.io/api/experimental/community/
-communities = [ "yapyap", ]
+  # See communities at:
+  # https://thunderstore.io/api/experimental/community/
+  communities=["yapyap"]
 
-[publish.categories]
-# See categories at:
-# https://thunderstore.io/api/experimental/community/yapyap/category/
-yapyap = [ "mods", ]
+  [publish.categories]
+    # See categories at:
+    # https://thunderstore.io/api/experimental/community/yapyap/category/
+    yapyap=["mods"]
