--- a/src/FrogDataLib/FrogDataLib.csproj
+++ b/src/FrogDataLib/FrogDataLib.csproj
@@ -9,6 +9,7 @@
     <AssemblyTitle>FrogDataLib</AssemblyTitle>
     <!-- This is the version number of your mod. -->
     <Version>0.1.0</Version>
+    <PackToTS>true</PackToTS>
   </PropertyGroup>
 
   <!--
